# stay-safe-jam

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt
data-src/: background.xcf  house.xcf
src/: Control.cpp  Control.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Gamepad.cpp  Gamepad.hpp  House.cpp  House.hpp  Keyboard.cpp  Keyboard.hpp  Player.cpp  Player.hpp  ToiletPaper.cpp  ToiletPaper.hpp  constants.cpp  constants.hpp  init.cpp  main.cpp
src/engine/: Animation.cpp  Animation.hpp  Fade.cpp  Options.cpp  Options.hpp  Paths.cpp  Paths.hpp  ResizeGraphics.cpp  ResizeGraphics.hpp  SkeletonDrawable.cpp  SkeletonDrawable.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
src/engine/effects/: Effect.cpp  Effect.hpp  FadeOut.cpp  FadeOut.hpp
windows/: convert.sh  installer.nsi
